syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.tong.proto";

import "memory_message.proto";

message Cpu {
  string brand = 1;
  string name = 2;
  uint32 number_cores = 3;
  uint32 number_threads = 4;
  double min_ghz = 5;
  double max_ghz = 6;
}

message Gpu {
  string brand = 1;
  string name = 2;
  double min_ghz = 3;
  double max_ghz = 4;
  Memory memory = 5;
}